--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "Creating a React project",
-  
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "keywords": [
@@ -22,10 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
-
-  "browserslist":[
+  "browserslist": [
     "last 2 version"
   ]
-
-  
 }
